# kryptis

./: .gitignore  Cargo.toml  README.md  build.rs
.claude/: launch.json
kryptis-guest/: Cargo.toml
kryptis-guest/src/: main.rs
kryptis-types/: Cargo.toml
kryptis-types/src/: lib.rs
scripts/: testnet.sh
src/: lib.rs  main.rs  rpc.rs
src/availability/: layer.rs  mod.rs
src/cli/: mod.rs
src/consensus/: engine.rs  mod.rs  sequencer.rs  validator.rs
src/core/: block.rs  chain.rs  crypto.rs  error.rs  mod.rs  transaction.rs
src/execution/: batch.rs  domain.rs  mod.rs  utxo.rs
src/network/: messages.rs  mod.rs  node.rs
src/settlement/: mod.rs  proof.rs  prover.rs
src/storage/: mod.rs  rocksdb.rs
src/wallet/: mod.rs
tests/: e2e_settlement.rs
