[package]
name = "kryptis"
version = "0.1.0"
edition = "2021"
description = "Kryptis ($KRS) — Modular Proof of Stake blockchain"

[[bin]]
name = "kryptis"
path = "src/main.rs"

[lib]
name = "kryptis_lib"
path = "src/lib.rs"

[dependencies]
# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }

# Networking
libp2p = { version = "0.53", features = [
  "tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"
]}

# Storage
rocksdb = "0.21"

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP RPC
axum = "0.7"
tower = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async streams (required for libp2p StreamExt)
futures = "0.3"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
